--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title> Forest Loss – Sri Lanka</title>
+  <title>Forest Loss – Sri Lanka</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Fonts & Icons -->
@@ -94,7 +94,7 @@
   </style>
 </head>
 <body>
-  <header>  Forest Loss Web Map – Sri Lanka
+  <header> Forest Loss Web Map – Sri Lanka
   </header>
 
   <div class="container">
@@ -102,7 +102,7 @@
     <div id="panel">
       <h2>Forest Loss by District</h2>
       <p>
-        This map visualizes Forest loss in Sri Lanka. Click a district to see annual forest loss from 2001 to 2023.
+        This map visualizes forest loss in Sri Lanka. Click a district to see annual forest loss from 2001 to 2023.
       </p>
       <canvas id="lossChart"></canvas>
     </div>
