--- a/index.html
+++ b/index.html
@@ -1,137 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Forest Loss in Sri Lanka</title>
-
-  <!-- Fonts & Libraries -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-  <!-- Style -->
+  <meta charset="utf-8" />
+  <title>Forest Loss in Puttalam & Mannar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #333;
-    }
-
-    header {
-      background: linear-gradient(to right, #00695c, #26a69a);
-      color: white;
-      padding: 1rem 2rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    header p {
-      margin: 0.3rem 0 0;
-      font-size: 1rem;
-      opacity: 0.9;
-    }
-
-    main {
-      display: flex;
-      padding: 20px;
-      gap: 20px;
-    }
-
-    #chart-form-container {
-      width: 38%;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    #chart-box {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-
-    #chart-box h2 {
-      color: #004d40;
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
-
-    iframe {
-      width: 100%;
-      height: 350px;
-      border: none;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
-    }
-
-    #map {
-      width: 60%;
-      height: 600px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.2);
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background: #f0f0f0;
-      margin-top: 20px;
-    }
-
-    @media (max-width: 960px) {
-      main {
-        flex-direction: column;
-      }
-      #map, #chart-form-container {
-        width: 100%;
-      }
-      iframe {
-        height: 400px;
-      }
-    }
+    #map { height: 80vh; width: 100%; }
+    #chart-container { width: 100%; padding: 10px; background: #fff; }
+    canvas { max-width: 100%; }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Forest Loss in Sri Lanka (2001–2023)</h1>
-    <p>Interactive Map & Public Reporting Tool</p>
-  </header>
+  <h2 style="text-align:center;">🌳 Forest Loss in Dry Zone Forests – Puttalam & Mannar</h2>
+  <div id="map"></div>
+  <div id="chart-container">
+    <canvas id="lossChart"></canvas>
+  </div>
 
-  <main>
-    <div id="chart-form-container">
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-      <div id="chart-box">
-        <h2 id="district-name">Select a District to View Forest Loss</h2>
-        <canvas id="forestChart"></canvas>
-      </div>
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-      <div>
-        <h2>Submit Your Local Observation</h2>
-        <p>Please help us improve forest protection efforts by reporting on-the-ground activities or conditions.</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true">Loading…</iframe>
-      </div>
+  <!-- PapaParse for CSV -->
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
 
-    </div>
+  <script>
+    // Initialize the map
+    const map = L.map('map').setView([8.6, 79.9], 8);
 
-    <div id="map"></div>
-  </main>
+    // ✅ Label-free base map (dark, no roads/labels)
+    L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}{r}.png', {
+      maxZoom: 18,
+      attribution: '&copy; Stadia Maps, &copy; OpenMapTiles'
+    }).addTo(map);
 
-  <footer>
-    &copy; 2025 Forest Monitoring Tool – Developed for GIS & Remote Sensing Projects, University of Moratuwa
-  </footer>
+    // Add district GeoJSON
+    fetch('data/sri_lanka_districts.geojson')
+      .then(res => res.json())
+      .then(data => {
+        L.geoJSON(data, {
+          style: {
+            color: '#00e676',
+            weight: 2,
+            fillColor: '#1b5e20',
+            fillOpacity: 0.3
+          },
+          onEachFeature: (feature, layer) => {
+            const name = feature.properties?.DISTRICT || "Unknown District";
+            layer.bindPopup(`<strong>${name}</strong>`);
+          }
+        }).addTo(map);
+      });
 
-  <script src="js/main.js"></script>
+    // Load CSV forest loss data
+    fetch('data/forest_loss.csv')
+      .then(res => res.text())
+      .then(csvText => {
+        const parsed = Papa.parse(csvText, { header: true });
+        const data = parsed.data;
 
+        const districts = data.map(row => row.District);
+        const losses = data.map(row => parseFloat(row.ForestLoss));
+
+        // Draw bar chart
+        new Chart(document.getElementById('lossChart').getContext('2d'), {
+          type: 'bar',
+          data: {
+            labels: districts,
+            datasets: [{
+              label: 'Forest Loss (hectares)',
+              data: losses,
+              backgroundColor: 'rgba(255, 99, 132, 0.7)'
+            }]
+          },
+          options: {
+            responsive: true,
+            plugins: {
+              legend: { display: false },
+              title: {
+                display: true,
+                text: 'Forest Loss per District'
+              }
+            },
+            scales: {
+              y: {
+                beginAtZero: true
+              }
+            }
+          }
+        });
+      });
+
+    // ✅ OPTIONAL: Add Raster TIF if tiled and hosted
+    // const raster = L.tileLayer('tiles/your_tif_folder/{z}/{x}/{y}.png', {
+    //   attribution: 'TIF Data',
+    //   opacity: 0.6
+    // }).addTo(map);
+
+  </script>
 </body>
 </html>
