--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 
-  <!-- Style -->
   <style>
     body {
       margin: 0;
@@ -20,66 +20,35 @@
       background-size: cover;
       color: #333;
     }
-
     header {
       background: linear-gradient(to right, #00695c, #26a69a);
       color: white;
       padding: 1rem 2rem;
       text-align: center;
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    header p {
-      margin: 0.3rem 0 0;
-      font-size: 1rem;
-      opacity: 0.9;
-    }
-
     main {
       display: flex;
       padding: 20px;
       gap: 20px;
     }
-
     #chart-form-container {
       width: 38%;
       display: flex;
       flex-direction: column;
       gap: 20px;
     }
-
     #chart-box {
       background: white;
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
     }
-
-    #chart-box h2 {
-      color: #004d40;
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
-
-    iframe {
-      width: 100%;
-      height: 350px;
-      border: none;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
-    }
-
     #map {
       width: 60%;
       height: 600px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
     }
-
     footer {
       text-align: center;
       padding: 1rem;
@@ -87,51 +56,102 @@
       background: #f0f0f0;
       margin-top: 20px;
     }
-
     @media (max-width: 960px) {
-      main {
-        flex-direction: column;
-      }
-      #map, #chart-form-container {
-        width: 100%;
-      }
-      iframe {
-        height: 400px;
-      }
+      main { flex-direction: column; }
+      #map, #chart-form-container { width: 100%; }
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Forest Loss in Sri Lanka (2001–2023)</h1>
     <p>Interactive Map & Public Reporting Tool</p>
   </header>
-
   <main>
     <div id="chart-form-container">
-
       <div id="chart-box">
         <h2 id="district-name">Select a District to View Forest Loss</h2>
         <canvas id="forestChart"></canvas>
       </div>
-
       <div>
         <h2>Submit Your Local Observation</h2>
-        <p>Please help us improve forest protection efforts by reporting on-the-ground activities or conditions.</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true" width="100%" height="350" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
-
     </div>
-
     <div id="map"></div>
   </main>
-
   <footer>
     &copy; 2025 Forest Monitoring Tool – Developed for GIS & Remote Sensing Projects, University of Moratuwa
   </footer>
+  <script>
+    const map = L.map('map').setView([7.8731, 80.7718], 7);
 
-  <script src="js/main.js"></script>
+    // Add basemap
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "&copy; OpenStreetMap contributors"
+    }).addTo(map);
 
+    let forestLossData = {};
+    let chart;
+
+    d3.csv("data/district_forest_loss_srilanka.csv").then(data => {
+      data.forEach(row => {
+        forestLossData[row.District.trim().toLowerCase()] = row;
+      });
+    });
+
+    fetch("data/sri_lanka_districts.geojson")
+      .then(res => res.json())
+      .then(geojsonData => {
+        L.geoJSON(geojsonData, {
+          style: {
+            color: "#3388ff",
+            weight: 2,
+            fillOpacity: 0.2
+          },
+          onEachFeature: (feature, layer) => {
+            const districtName = feature.properties.DISTRICT.trim();
+            const key = districtName.toLowerCase();
+
+            layer.on({
+              click: () => {
+                document.getElementById("district-name").textContent = districtName;
+                const data = forestLossData[key];
+
+                if (!data) {
+                  alert("No data for " + districtName);
+                  return;
+                }
+
+                const years = Array.from({ length: 23 }, (_, i) => 2001 + i);
+                const losses = years.map(y => +data["Loss_" + y] || 0);
+
+                if (chart) chart.destroy();
+
+                chart = new Chart(document.getElementById("forestChart"), {
+                  type: "bar",
+                  data: {
+                    labels: years,
+                    datasets: [{
+                      label: "Forest Loss (ha)",
+                      backgroundColor: "#26a69a",
+                      data: losses
+                    }]
+                  },
+                  options: {
+                    responsive: true,
+                    scales: {
+                      y: { beginAtZero: true }
+                    }
+                  }
+                });
+              },
+              mouseover: e => e.target.setStyle({ weight: 3, color: "#ff9900", fillOpacity: 0.6 }),
+              mouseout: e => e.target.setStyle({ weight: 2, color: "#3388ff", fillOpacity: 0.2 })
+            });
+          }
+        }).addTo(map);
+      });
+  </script>
 </body>
-</html> 
+</html>
