--- a/index.html
+++ b/index.html
@@ -1,157 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Forest Loss in Sri Lanka</title>
 
-  <!-- Fonts & Libraries -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <!-- Leaflet CSS & JS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+  />
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+
+  <!-- D3.js -->
+  <script src="https://d3js.org/d3.v6.min.js"></script>
 
   <style>
+    #map {
+      width: 70%;
+      height: 600px;
+      float: left;
+    }
+    #chart {
+      width: 28%;
+      float: right;
+      padding: 10px;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    }
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
-      background-size: cover;
-      color: #333;
+      font-family: sans-serif;
+      background: #f4f4f4;
     }
-    header {
-      background: linear-gradient(to right, #00695c, #26a69a);
-      color: white;
-      padding: 1rem 2rem;
+    h2 {
       text-align: center;
-    }
-    main {
-      display: flex;
-      padding: 20px;
-      gap: 20px;
-    }
-    #chart-form-container {
-      width: 38%;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-    #chart-box {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-    #map {
-      width: 60%;
-      height: 600px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.2);
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background: #f0f0f0;
-      margin-top: 20px;
-    }
-    @media (max-width: 960px) {
-      main { flex-direction: column; }
-      #map, #chart-form-container { width: 100%; }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Forest Loss in Sri Lanka (2001–2023)</h1>
-    <p>Interactive Map & Public Reporting Tool</p>
-  </header>
-  <main>
-    <div id="chart-form-container">
-      <div id="chart-box">
-        <h2 id="district-name">Select a District to View Forest Loss</h2>
-        <canvas id="forestChart"></canvas>
-      </div>
-      <div>
-        <h2>Submit Your Local Observation</h2>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true" width="100%" height="350" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
-    </div>
-    <div id="map"></div>
-  </main>
-  <footer>
-    &copy; 2025 Forest Monitoring Tool – Developed for GIS & Remote Sensing Projects, University of Moratuwa
-  </footer>
-  <script>
-    const map = L.map('map').setView([7.8731, 80.7718], 7);
+  <div id="map"></div>
+  <div id="chart">
+    <h2>District-wise Forest Loss</h2>
+    <svg width="300" height="500"></svg>
+  </div>
 
-    // Add basemap
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      attribution: "&copy; OpenStreetMap contributors"
+  <script>
+    // Initialize map
+    const map = L.map("map").setView([7.8731, 80.7718], 7);
+
+    // Add custom tile layer
+    L.tileLayer("data/TreeLoss_Treecover/{z}/{x}/{y}.png", {
+      attribution: "Custom Tiles",
+      maxZoom: 12,
     }).addTo(map);
 
-    let forestLossData = {};
-    let chart;
-
-    d3.csv("data/district_forest_loss_srilanka.csv").then(data => {
-      data.forEach(row => {
-        forestLossData[row.District.trim().toLowerCase()] = row;
-      });
-    });
-
+    // Load GeoJSON for districts
     fetch("data/sri_lanka_districts.geojson")
-      .then(res => res.json())
-      .then(geojsonData => {
-        L.geoJSON(geojsonData, {
+      .then((res) => res.json())
+      .then((geojsonData) => {
+        const geojsonLayer = L.geoJSON(geojsonData, {
           style: {
-            color: "#3388ff",
-            weight: 2,
-            fillOpacity: 0.2
+            color: "#fff",
+            weight: 1,
+            fillOpacity: 0,
           },
           onEachFeature: (feature, layer) => {
-            const districtName = feature.properties.DISTRICT.trim();
-            const key = districtName.toLowerCase();
-
-            layer.on({
-              click: () => {
-                document.getElementById("district-name").textContent = districtName;
-                const data = forestLossData[key];
-
-                if (!data) {
-                  alert("No data for " + districtName);
-                  return;
-                }
-
-                const years = Array.from({ length: 23 }, (_, i) => 2001 + i);
-                const losses = years.map(y => +data["Loss_" + y] || 0);
-
-                if (chart) chart.destroy();
-
-                chart = new Chart(document.getElementById("forestChart"), {
-                  type: "bar",
-                  data: {
-                    labels: years,
-                    datasets: [{
-                      label: "Forest Loss (ha)",
-                      backgroundColor: "#26a69a",
-                      data: losses
-                    }]
-                  },
-                  options: {
-                    responsive: true,
-                    scales: {
-                      y: { beginAtZero: true }
-                    }
-                  }
-                });
-              },
-              mouseover: e => e.target.setStyle({ weight: 3, color: "#ff9900", fillOpacity: 0.6 }),
-              mouseout: e => e.target.setStyle({ weight: 2, color: "#3388ff", fillOpacity: 0.2 })
+            layer.on("click", () => {
+              highlightDistrict(feature.properties.DISTRICT);
             });
-          }
+          },
         }).addTo(map);
       });
+
+    // Load CSV data and draw chart
+    d3.csv("data/district_forest_loss_srilanka.csv").then((data) => {
+      data.forEach((d) => {
+        d.loss = +d.loss;
+      });
+      drawBarChart(data);
+    });
+
+    function drawBarChart(data) {
+      const svg = d3.select("svg");
+      const margin = { top: 20, right: 20, bottom: 50, left: 60 };
+      const width = +svg.attr("width") - margin.left - margin.right;
+      const height = +svg.attr("height") - margin.top - margin.bottom;
+      const chart = svg
+        .append("g")
+        .attr("transform", `translate(${margin.left},${margin.top})`);
+
+      const x = d3
+        .scaleBand()
+        .domain(data.map((d) => d.district))
+        .range([0, width])
+        .padding(0.2);
+
+      const y = d3.scaleLinear().domain([0, d3.max(data, (d) => d.loss)]).range([height, 0]);
+
+      chart
+        .append("g")
+        .attr("transform", `translate(0,${height})`)
+        .call(d3.axisBottom(x))
+        .selectAll("text")
+        .attr("transform", "rotate(-45)")
+        .style("text-anchor", "end");
+
+      chart.append("g").call(d3.axisLeft(y));
+
+      chart
+        .selectAll("rect")
+        .data(data)
+        .enter()
+        .append("rect")
+        .attr("x", (d) => x(d.district))
+        .attr("y", (d) => y(d.loss))
+        .attr("width", x.bandwidth())
+        .attr("height", (d) => height - y(d.loss))
+        .attr("fill", "#2e8b57")
+        .attr("class", "bar");
+    }
+
+    function highlightDistrict(districtName) {
+      d3.csv("data/district_forest_loss_srilanka.csv").then((data) => {
+        data.forEach((d) => {
+          d.loss = +d.loss;
+        });
+        const filtered = data.filter((d) => d.district === districtName);
+        drawBarChart(filtered);
+      });
+    }
   </script>
 </body>
 </html>
