--- a/index.html
+++ b/index.html
@@ -1,137 +1,66 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Forest Loss in Sri Lanka</title>
 
-  <!-- Fonts & Libraries -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-
-  <!-- Style -->
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+  
+  <!-- Custom Styling -->
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9 url('background.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: #333;
-    }
-
-    header {
-      background: linear-gradient(to right, #00695c, #26a69a);
-      color: white;
-      padding: 1rem 2rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-
-    header p {
-      margin: 0.3rem 0 0;
-      font-size: 1rem;
-      opacity: 0.9;
-    }
-
-    main {
-      display: flex;
-      padding: 20px;
-      gap: 20px;
-    }
-
-    #chart-form-container {
-      width: 38%;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    #chart-box {
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-    }
-
-    #chart-box h2 {
-      color: #004d40;
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
-
-    iframe {
-      width: 100%;
-      height: 350px;
-      border: none;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
     }
 
     #map {
-      width: 60%;
-      height: 600px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.2);
+      height: 70vh;
+      width: 100%;
     }
 
-    footer {
+    #chart-container {
+      height: 30vh;
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 10px;
+    }
+
+    canvas {
+      width: 100% !important;
+      height: 100% !important;
+    }
+
+    h2 {
       text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background: #f0f0f0;
-      margin-top: 20px;
-    }
-
-    @media (max-width: 960px) {
-      main {
-        flex-direction: column;
-      }
-      #map, #chart-form-container {
-        width: 100%;
-      }
-      iframe {
-        height: 400px;
-      }
+      margin-top: 5px;
+      color: #333;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Forest Loss in Sri Lanka (2001–2023)</h1>
-    <p>Interactive Map & Public Reporting Tool</p>
-  </header>
+  <div id="map"></div>
+  <div id="chart-container">
+    <h2 id="chart-title">Click a district to view forest loss data</h2>
+    <canvas id="chart"></canvas>
+  </div>
 
-  <main>
-    <div id="chart-form-container">
+  <!-- Leaflet JS -->
+  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 
-      <div id="chart-box">
-        <h2 id="district-name">Select a District to View Forest Loss</h2>
-        <canvas id="forestChart"></canvas>
-      </div>
+  <!-- D3.js for CSV parsing -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
 
-      <div>
-        <h2>Submit Your Local Observation</h2>
-        <p>Please help us improve forest protection efforts by reporting on-the-ground activities or conditions.</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true">Loading…</iframe>
-      </div>
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 
-    </div>
-
-    <div id="map"></div>
-  </main>
-
-  <footer>
-    &copy; 2025 Forest Monitoring Tool – Developed for GIS & Remote Sensing Projects, University of Moratuwa
-  </footer>
-
-  <script src="js/main.js"></script>
+  <!-- Main Script -->
+  <script src="main.js"></script>
 
 </body>
-</html> 
+</html>
+
