--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       font-family: 'Poppins', sans-serif;
       background: url('background.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: #333;
+      color: black;
     }
 
     header {
@@ -67,7 +67,7 @@
 
     iframe {
       width: 100%;
-      height: 350px;
+      height: 425px;
       border: none;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
@@ -75,7 +75,7 @@
 
     #map {
       width: 60%;
-      height: 600px;
+      height: 500px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
     }
@@ -96,7 +96,7 @@
         width: 100%;
       }
       iframe {
-        height: 400px;
+        height: 250px;
       }
     }
   </style>
