--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: url('background.jpg') no-repeat center center fixed;
+      background-color: black;
       background-size: cover;
-      color: black;
+     
     }
 
     header {
@@ -54,8 +54,8 @@
 
     #chart-box {
       background: white;
-      padding: 20px;
-      border-radius: 12px;
+      padding: 50px;
+      border-radius: 15px;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
     }
 
@@ -67,14 +67,14 @@
 
     iframe {
       width: 100%;
-      height: 425px;
+      height: 250px;
       border: none;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
     }
 
     #map {
-      width: 60%;
+      width: 50%;
       height: 500px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
