--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: black;
+      background-color:#f0f0f0;
       background-size: cover;
      
     }
@@ -42,7 +42,7 @@
     main {
       display: flex;
       padding: 20px;
-      gap: 20px;
+      gap: 30px;
     }
 
     #chart-form-container {
@@ -66,7 +66,7 @@
     }
 
     iframe {
-      width: 100%;
+      width: 40%;
       height: 100px;
       border: none;
       border-radius: 10px;
