--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color:#f0f0f0;
+      background-color:#e2eee9;
       background-size: cover;
      
     }
@@ -46,7 +46,7 @@
     }
 
     #chart-form-container {
-      width: 38%;
+      width: 45%;
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -74,7 +74,7 @@
     }
 
     #map {
-      width: 40%;
+      width: 45%;
       height: 500px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
@@ -96,7 +96,7 @@
         width: 100%;
       }
       iframe {
-        height: 100px;
+        height: 50px;
       }
     }
   </style>
