--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color:#e2eee9;
+      background-color:#060426;
       background-size: cover;
      
     }
@@ -30,11 +30,14 @@
 
     header h1 {
       margin: 0;
+      color: white;
+      text-align: center;
       font-size: 2rem;
     }
 
     header p {
       margin: 0.3rem 0 0;
+      color: white;
       font-size: 1rem;
       opacity: 0.9;
     }
@@ -74,8 +77,8 @@
     }
 
     #map {
-      width: 45%;
-      height: 500px;
+      width: 55%;
+      height: 550px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
     }
@@ -96,7 +99,7 @@
         width: 100%;
       }
       iframe {
-        height: 50px;
+        height: 100px;
       }
     }
   </style>
@@ -104,7 +107,7 @@
 <body>
 
   <header>
-    <h1>Forest Loss in Sri Lanka (2001–2023)</h1>
+    <h1>Forest Loss in Sri Lanka </h1>
     <p>Interactive Map & Public Reporting Tool</p>
   </header>
 
