--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       font-family: 'Poppins', sans-serif;
       background-color:#060426;
       background-size: cover;
+     width:100%;
+     height:100%;
      
     }
 
@@ -30,14 +32,14 @@
 
     header h1 {
       margin: 0;
-      color: white;
+      background-color:white;
       text-align: center;
       font-size: 2rem;
     }
 
     header p {
       margin: 0.3rem 0 0;
-      color: white;
+      background-color:white;
       font-size: 1rem;
       opacity: 0.9;
     }
@@ -70,7 +72,7 @@
 
     iframe {
       width: 40%;
-      height: 100px;
+      height: 250px;
       border: none;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
@@ -99,7 +101,7 @@
         width: 100%;
       }
       iframe {
-        height: 100px;
+        height: 250px;
       }
     }
   </style>
