--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
       font-family: 'Poppins', sans-serif;
       background-color:#060426;
       background-size: cover;
-     width:100%;
-     height:100%;
+     
+     padding: 0;
+     height: 100%;
+     width: 100%;
+     overflow: hidden; /* optional: removes scrollbars */
      
     }
 
@@ -32,14 +35,14 @@
 
     header h1 {
       margin: 0;
-      background-color:white;
+      color:white;
       text-align: center;
       font-size: 2rem;
     }
 
     header p {
       margin: 0.3rem 0 0;
-      background-color:white;
+      color:white;
       font-size: 1rem;
       opacity: 0.9;
     }
@@ -47,7 +50,7 @@
     main {
       display: flex;
       padding: 20px;
-      gap: 30px;
+      gap: 10px;
     }
 
     #chart-form-container {
@@ -72,7 +75,7 @@
 
     iframe {
       width: 40%;
-      height: 250px;
+      height: 100px;
       border: none;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
@@ -101,7 +104,7 @@
         width: 100%;
       }
       iframe {
-        height: 250px;
+        height: 100px;
       }
     }
   </style>
