--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color:#060426;
+      background-color:#f7f6ff;
       background-size: cover;
      
      padding: 0;
