--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
     }
 
     iframe {
-      width: 40%;
-      height: 100px;
+      width: 55%;
+      height: 200px;
+      align: center;
       border: none;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.15);
@@ -83,7 +84,7 @@
 
     #map {
       width: 55%;
-      height: 550px;
+      height: 600px;
       border-radius: 12px;
       box-shadow: 0 0 12px rgba(0,0,0,0.2);
     }
@@ -92,11 +93,12 @@
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
-      background: #f0f0f0;
+      background: #66c2a5;
+       color:white;
       margin-top: 20px;
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 950px) {
       main {
         flex-direction: column;
       }
@@ -104,7 +106,7 @@
         width: 100%;
       }
       iframe {
-        height: 100px;
+        height: 200px;
       }
     }
   </style>
