--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script>
+  // Initialize the map on the existing #map div
+  const map = L.map('map').setView([7.87, 80.77], 7);
+
+  // Add OSM base layer
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: 'Map data © OpenStreetMap contributors'
+  }).addTo(map);
+
+  // Image bounds from your TIFF info
+  const imageBounds = [
+    [5.9194485647, 79.5211147385],  // southwest latlng
+    [9.8352048882, 81.8791923593]   // northeast latlng
+  ];
+
+  // Add PNG overlay (ensure 'forest_loss.png' is in the correct path)
+  L.imageOverlay('forest_loss.png', imageBounds, {
+    opacity: 0.8
+  }).addTo(map);
+</script>
 
   <!-- Style -->
   <style>
