--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
   // Initialize the map on the existing #map div
-  const map = L.map('map').setView([7.87, 80.77], 7);
+  const map = L.map('map', {
+  zoomControl: true,
+  attributionControl: false
+}).setView([7.8731, 80.7718], 7);
 
-  // Add OSM base layer
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: 'Map data © OpenStreetMap contributors'
-  }).addTo(map);
-
-  // Image bounds from your TIFF info
-  const imageBounds = [
-    [5.9194485647, 79.5211147385],  // southwest latlng
-    [9.8352048882, 81.8791923593]   // northeast latlng
-  ];
+// Dark basemap with NO labels
+const darkNoLabel = L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_nolabels/{z}/{x}/{y}{r}.png', {
+  subdomains: 'abcd'
+}).addTo(map);
 
   // Add PNG overlay (ensure 'forest_loss.png' is in the correct path)
   L.imageOverlay('forest_loss.png', imageBounds, {
