--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       <div id="chart-box">
         <h2 id="district-name">Select a District to View Forest Loss</h2>
-        <canvas id="forestChart"></canvas>
+        <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none; margin-top:10px;" />
       </div>
 
       <div>
