--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
     }
 
-    #chart-box h2 {
+    #chart-box h2{
       color: #004d40;
       font-size: 1.2rem;
       margin-bottom: 10px;
@@ -123,13 +123,19 @@
   <main>
     <div id="chart-form-container">
 
-      <div id="chart-box">
-        <h2 id="district-name">Select a District to View Forest Loss</h2>
-        <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none; margin-top:10px;" />
-      </div>
+     <div id="chart-box">
+  <h2>Select a District to View Forest Loss</h2>
+  <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
+</div>
 
-      <div>
-        <h2>Submit Your Local Observation</h2>
+
+
+     
+        <div id="chart-box">
+  <h3>Select a District to View Forest Loss</h3>
+  <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
+</div>
+
         <p>Please help us improve forest protection efforts by reporting on-the-ground activities or conditions.</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true">Loading…</iframe>
       </div>
