--- a/index.html
+++ b/index.html
@@ -62,18 +62,15 @@
       gap: 20px;
     }
 
-    #chart-box {
-      background: white;
+    #chart-box h2{
+      background: #004d40;
       padding: 75px;
       border-radius: 15px;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
+     margin-bottom: 10px;
     }
 
-    #chart-box h2{
-      color: #004d40;
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
+  
 
     iframe {
       width: 100%;
