--- a/index.html
+++ b/index.html
@@ -124,15 +124,8 @@
   <h2>Select a District to View Forest Loss</h2>
   <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
 </div>
-
-
-
      
-        <div id="chart-box">
-  <h3>Select a District to View Forest Loss</h3>
-  <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
-</div>
-
+<div>
         <p>Please help us improve forest protection efforts by reporting on-the-ground activities or conditions.</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true">Loading…</iframe>
       </div>
