--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     }
 
     #chart-box h2{
-      background: #004d40;
+      background: White;
       padding: 75px;
       border-radius: 15px;
       box-shadow: 0 0 12px rgba(0,0,0,0.1);
