--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 </div>
      
 <div>
+       <h2>Submit Your Local Observation</h2>
         <p>Please help us improve forest protection efforts by reporting on-the-ground activities or conditions.</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdc6T4gmsntB7ijvL3HtLtmL0y5fXKbxHh6yRRmrH42zZCpFg/viewform?embedded=true">Loading…</iframe>
       </div>
