--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       padding: 20px;
       gap: 10px;
     }
-#map {
+map {
       width: 100%;
       height: 100%;
 }
- #chart-container {
+ chart-container {
       position: absolute;
       top: 10px;
       right: 10px;
@@ -69,12 +69,12 @@
       display: none;
     }
 
-    #chart-container img {
+    chart-container img {
       width: 100%;
       border-radius: 8px;
     }
 
-    #chart-title {
+    chart-title {
       font-size: 1.1em;
       margin-bottom: 8px;
       text-align: center;
@@ -142,7 +142,7 @@
 
     </div>
 
-    
+     <div id="map"></div>
   </main>
 
   <footer>
