--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     }
 
 
+<style>
   .legend {
-   
+    position: absolute;
     bottom: 30px;
     left: 30px;
-    background: white;
+    background: #97969c;
+    color: black;
     padding: 10px;
     font-size: 12px;
     line-height: 18px;
@@ -40,6 +42,7 @@
     border-radius: 5px;
     z-index: 1000;
   }
+</style>
 
 
    
@@ -147,6 +150,8 @@
       </div>
 
     </div>
+
+   <div id="map" style="height: 100vh; position: relative;">
 <!-- Legend for Forest Loss Year Ranges -->
 <div id="legend" class="legend">
   <b>Forest Loss Year</b><br>
