--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
     }
 
 
-<style>
   .legend {
-    position: absolute;
+   
     bottom: 30px;
     left: 30px;
-    background: #97969c;
-    color: black;
+    background: white;
     padding: 10px;
     font-size: 12px;
     line-height: 18px;
@@ -42,7 +40,6 @@
     border-radius: 5px;
     z-index: 1000;
   }
-</style>
 
 
    
@@ -150,8 +147,6 @@
       </div>
 
     </div>
-
-   <div id="map" style="height: 100vh; position: relative;">
 <!-- Legend for Forest Loss Year Ranges -->
 <div id="legend" class="legend">
   <b>Forest Loss Year</b><br>
