--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
      margin-bottom: 10px;
     }
 
-       #chart-box h3{
+       #report-box h3{
       background: White;
       position: absolute;
       padding: 50px;
@@ -103,9 +103,6 @@
      margin-bottom: 10px;
     }
 
-  
-
-   
 
     #map {
       width: 55%;
