--- a/index.html
+++ b/index.html
@@ -94,15 +94,6 @@
      margin-bottom: 10px;
     }
 
-       #report-box h3{
-      background: White;
-      position: absolute;
-      padding: 50px;
-      border-radius: 15px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-     margin-bottom: 10px;
-    }
-
 
     #map {
       width: 55%;
@@ -160,29 +151,11 @@
   
 </div>
 
-<!-- Report Form Container -->
-<div id="reportBox">
-  <h3>Comment & Report</h3>
-  <label>Location:</label>
-  <input type="text" id="location" placeholder="Enter area name" />
 
-  <label>Short Description:</label>
-  <input type="text" id="shortDesc" placeholder="E.g. Tree cutting" />
-
-  <label>Details:</label>
-  <textarea id="details" placeholder="More details..."></textarea>
-
-  <label>Upload Image/Video:</label>
-  <input type="file" id="fileUpload" />
-
-  <label>Your Name (optional):</label>
-  <input type="text" id="username" />
-
-  <button onclick="submitReport()">Submit</button>
-</div>
+ 
 
  <div id="reportBox">
-  <h4>Report Deforestation</h4>
+  <h4>Comment here... ! </h4>
   <label>Location:</label>
   <input id="reportLocation" placeholder="Click map to select" disabled><br>
   
