--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
      width: 100%;
       
     }
-.custom-icon {
-    font-size: 24px;
-    text-align: center;
-  }
+
 
   .legend {
     position: absolute;
@@ -153,12 +150,9 @@
 
 
 
-
-<div id="map" style="height: 100vh;"></div>
-
 <!-- Reporting Box (bottom-left) -->
-<div id="reportBox" class="report-box">
-  <h4>Report Deforestation</h4>
+<div id="reportBox" >
+  <h4>Report & Comment</h4>
   <input type="text" id="locationInput" placeholder="Location" readonly><br>
   <input type="text" id="problem" placeholder=" Issue (e.g. Tree Cutting)"><br>
   <textarea id="moreInfo" placeholder="More details..."></textarea><br>
