--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
     }
 
 
+  .legend {
+    position: absolute;
+    bottom: 80px;
+    left: 30px;
+    background: white;
+    padding: 10px;
+    font-size: 12px;
+    line-height: 18px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    z-index: 1000;
+  }
+
 
    
     header {
@@ -123,13 +136,16 @@
      
 
 
-  <div id="legend" class="legend">
-  <b style="color: black;">Forest Loss by Year</b><br>
-  <i style="background:#440154;"></i> 2001–2005<br>
-  <i style="background:#31688e;"></i> 2006–2010<br>
-  <i style="background:#35b779;"></i> 2011–2015<br>
-  <i style="background:#fde725;"></i> 2016–2020<br>
-  <i style="background:#ffea46;"></i> 2021–2023
+    </div>
+
+   <div id="legend" class="legend">
+    <b style="color: black;">Forest Loss by Year</b><br>
+    <i style="background:#440154;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2001–2005<br>
+    <i style="background:#31688e;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2006–2010<br>
+    <i style="background:#35b779;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2011–2015<br>
+    <i style="background:#fde725;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2016–2020<br>
+    <i style="background:#ffea46;width:15px;height:15px;display:inline-block;margin-right:5px;"></i> 2021–2023
+  
 </div>
 
 
