--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   .legend {
     position: absolute;
-    bottom: 80px;
+    bottom: 30px;
     left: 30px;
     background: white;
     padding: 10px;
@@ -159,14 +159,14 @@
 
 <!-- Hidden Report Box -->
 <div id="report-box" style="display: none; position: fixed; bottom: 60px; left: 20px; z-index: 1000; background-color: white; padding: 10px; border-radius: 10px; width: 260px; box-shadow: 0 0 12px rgba(0,0,0,0.4);">
-  <h4 style="margin-top: 0;"> Report & Comment </h4>
+  <h4 style="margin-top: 0;">Deforestation Report</h4>
   <label>Location:</label><br>
   <input type="text" id="location" style="width: 100%;"><br><br>
 
   <label>Short Description:</label><br>
   <input type="text" id="shortDesc" style="width: 100%;"><br><br>
 
-  <label>issue Details:</label><br>
+  <label>Details:</label><br>
   <textarea id="details" rows="3" style="width: 100%;"></textarea><br><br>
 
   <label>Upload Image/Video:</label><br>
