--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <!-- Legend -->
       <div id="legend" class="legend">
-  <b style="color: black;">Forest Loss by year (0–24)</b>
+  <b style="color: black;">Forest_Loss_by_year (0–24)</b>
   <div style="width: 200px; height: 15px; background: linear-gradient(to right, #0b0405, #170c14, #211424, #2b1c35, #342446, #3a2c58, #3e356b, #413e7e, #40498e, #3b5698, #38639d, #366fa0, #357ba3, #3487a6, #3492a8, #359fab, #39abac, #3fb6ad, #4bc2ad, #5dcdad, #7ad6ae, #99ddb6, #b4e5c3, #cbedd5, #def5e5); border: 1px solid #999; margin: 5px 0;"></div>
   <div style="display: flex; justify-content: space-between; font-size: 12px;">
     <span>0</span>
