--- a/index.html
+++ b/index.html
@@ -190,18 +190,8 @@
   <footer>
     &copy; 2025 Forest Monitoring Tool – Developed for GIS & Remote Sensing Projects | University of Moratuwa
   </footer>
+<script src="js/main.js"></script>
 
-  <script>
-    function toggleReportBox() {
-      const box = document.getElementById("report-box");
-      box.style.display = box.style.display === "none" ? "block" : "none";
-    }
-
-    function submitReportForm() {
-      alert("Report submitted successfully!");
-    }
-
-   
-  </script>
+  
 </body>
 </html>
